--- a/sass/custom/_paulus.scss
+++ b/sass/custom/_paulus.scss
@@ -626,6 +626,19 @@ div.config-vars {
   .nested {
     margin-left: 48px;
   }
+
+  .configuration-link {
+    font-size: 13px;
+
+    a {
+      color: #8792a2;
+      text-decoration: none;
+      border-bottom: #8792a2 dotted 0.5px;
+    }
+    i {
+      margin-right: 4px;
+    }
+  }
 }
 
 code {
