--- a/source/_includes/asides/component_navigation.html
+++ b/source/_includes/asides/component_navigation.html
@@ -1,4 +1,4 @@
-{% assign active_installations = site.data.analytics_data.integrations[page.ha_domain] | default: "0" %}
+{% assign active_installations = site.data.analytics_data.integrations[page.ha_domain] | default: 0 %}
 {% assign percentage = 100.0 | times: active_installations | divided_by: site.data.analytics_data.reports_integrations | round: 1 %}
 <section class="aside-module grid__item one-whole lap-one-half">
   <div class='brand-logo-container section'>
