--- a/source/_includes/asides/docs_navigation.html
+++ b/source/_includes/asides/docs_navigation.html
@@ -49,6 +49,7 @@
           <li>{% active_link /docs/energy/electricity-grid/ Electricity Grid %}</li>
           <li>{% active_link /docs/energy/solar-panels/ Solar Panels %}</li>
           <li>{% active_link /docs/energy/individual-devices/ Individual Devices %}</li>
+          <li>{% active_link /docs/energy/faq/ FAQ %}</li>
         </ul>
       </li>
       <li>
