--- a/source/_layouts/landingpage.html
+++ b/source/_layouts/landingpage.html
@@ -46,7 +46,7 @@ layout: page
         {% for entry in section.entries %}
           <div class="section-inner">
               <div class="section-inner-content">
-                <img {% if entry.image_description %} title="{{ entry.image_description }}" {% endif %} src="{{entry.image}}">
+                <img {% if entry.image_description %} alt="{{ entry.image_description }}" title="{{ entry.image_description }}" {% endif %} src="{{entry.image}}">
               </div>
               <div class="section-inner-content">
                   <div class="title">{{entry.title}}</div>
