--- a/source/_layouts/landingpage.html
+++ b/source/_layouts/landingpage.html
@@ -4,7 +4,7 @@ layout: page
 
 {% if page.og_image %}
   <div class="banner">
-    <img src="{{ page.og_image }}"></i>
+    <img src="{{ page.hero_image | default:page.og_image }}"></i>
     {% if page.tagline %}
       <div class="title {% if page.tagline_wide != false %}wide{% endif %}">
       {{ page.tagline }}
