--- a/source/_includes/custom/features.html
+++ b/source/_includes/custom/features.html
@@ -109,7 +109,7 @@
 
       <a
         class="button"
-        href="/docs/energy"
+        href="/docs/energy/"
       >
         LEARN MORE
       </a>
