--- a/source/_includes/custom/features.html
+++ b/source/_includes/custom/features.html
@@ -102,14 +102,14 @@
     </div>
     <div class="card-content">
       <p>
-        Home Assistant allows you to get on top of your energy use with its 
-        home energy management feature. Gain new insights, 
+        Home Assistant allows you to get on top of your energy use with its
+        home energy management feature. Gain new insights,
         optimize your solar panel production, plan energy usage and save money.
       </p>
 
       <a
         class="button"
-        href="/docs/energy/"
+        href="/home-energy-management/"
       >
         LEARN MORE
       </a>
