--- a/sass/custom/_landingpage.scss
+++ b/sass/custom/_landingpage.scss
@@ -35,6 +35,7 @@ $ha__primary_color: #03a9f4;
       line-height: 55px;
       text-align: center;
       color: #ffffff;
+      text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.75);
       bottom: 226px;
       svg {
         stroke: $ha__primary_color;
@@ -865,7 +866,7 @@ $ha__primary_color: #03a9f4;
   $landingpage__hero_height: 500px;
   #landingpage {
     .site-header {
-      background-color: #ffffff66;
+      background-color: #ffffffe8;
       transition: background 0.5s;
 
       ul {
@@ -911,7 +912,7 @@ $ha__primary_color: #03a9f4;
 
     .section-content {
       width: 100%;
-      padding: 32px 4px;
+      padding: 32px 8px;
 
       .header {
         width: 100%;
