Fix position of phone image

--- a/sass/custom/_paulus.scss
+++ b/sass/custom/_paulus.scss
@@ -79,6 +79,10 @@ $primary-color: #049cdb;
     display: inline-block;
     font-weight: 500;
   }
+
+  img {
+    display: block;
+  }
 }
 
 .material-card {
