--- a/source/_includes/site/header.html
+++ b/source/_includes/site/header.html
@@ -23,7 +23,7 @@
         ></label>
         <ul class="menu pull-right">
           <li><a href="/getting-started/">Getting started</a></li>
-          <li>
+          <li class="menuitemhasdropdown">
             <a href="/docs/"
               >Documentation <i class="icon icon-caret-down"></i
             ></a>
