CSS changes for fixing display nav menu on home

--- a/sass/oscailte/homepage/_home.scss
+++ b/sass/oscailte/homepage/_home.scss
@@ -4,7 +4,7 @@ ul.menu li {
     overflow: hidden;
 }
 
-ul.menu li.menuhasdropdown {
+ul.menu li.menuitemhasdropdown {
     overflow: visible;
 }
 
