Added a margin-top to Sponsors as in Press box

--- a/sass/custom/_paulus.scss
+++ b/sass/custom/_paulus.scss
@@ -241,8 +241,9 @@ $primary-color: #049cdb;
   }
 
   .sponsored-by {
-
-  img {
+    margin-top: 24px;
+    
+    img {
       border: 0;
       border-radius: 0;
       box-shadow: none;
